[package]
name = "strtoint"
version = "0.2.0-dev"
edition = "2021"
rust-version = "1.56"
description = "Parse integers from strings, with support for base prefixes"
authors = ["John Thorvald Wodder II <strtoint@varonathe.org>"]
repository = "https://github.com/jwodder/strtoint"
license = "MIT"
keywords = ["parse-int", "int", "hexadecimal", "octal", "binary"]
categories = ["no-std", "parsing", "text-processing"]
exclude = ["/.*"]

[dependencies]

[dev-dependencies]
test-case = "2.2.2"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
